<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NoteFlow</string>
    <string name="notes">Notes</string>
    <string name="favorite">Favorite</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="no_notes">No notes</string>
    <string name="arrow_back">Arrow back</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="edit">Edit</string>
    <string name="favorites">Favorites</string>
    <string name="no_favorites">No favorites</string>
    <string name="search_notes">Search notes</string>
</resources>